Fix java 21 deprecations