@@ -9,6 +9,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -27,7 +28,8 @@ public class AppListFetcher {
 
     private static SteamAppList actuallyFetchAppList() {
         try {
-            URL steamApiList = new URL("https://api.steampowered.com/ISteamApps/GetAppList/v2/");
+            URL steamApiList = URI.create("https://api.steampowered.com/ISteamApps/GetAppList/v2/")
+                    .toURL();
             HttpURLConnection urlConnection = (HttpURLConnection) steamApiList.openConnection();
             InputStream inputStream = urlConnection.getInputStream();
             String appListString = CharStreams.toString(new InputStreamReader(inputStream));
